--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>"Hello, world! This is my personal page hosted on GitHub pages."</h1>
+    <div class="title">
+        <h1>Learning Arena</h1>
+    </div>
+    <div class="button-container">
+        <button class="btn btn-about">About</button>
+        <button class="btn btn-start">Start</button>
+        <button class="btn btn-how">How to Play</button>
+    </div>
 </body>
 </html>
