--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="button-container">
         <button class="btn btn-about">About</button>
         <button class="btn btn-start">Start</button>
-        <button class="btn btn-how">How to Play</button>
+        <button class="btn btn-how">Help</button>
     </div>
 </body>
 </html>
