added meta tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Portuguese Learning Arena - Fun Flashcards for Kids</title>
+    <!-- Meta Description -->
+    <meta name="description" content="Fun and interactive flashcards to help kids learn Portuguese words, phrases, and pronunciation through play and repetition.">
+
+    <!-- Meta Keywords -->
+    <meta name="keywords" content="Portuguese flashcards, kids learning Portuguese, learn Portuguese for children, language learning, interactive flashcards, Portuguese vocabulary">
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-99ZT1GK7F1"></script>
     <script>
