add js and extra html pages

--- a/index.html
+++ b/index.html
@@ -26,9 +26,17 @@
         <h1>Learning Arena</h1>
     </div>
     <div class="button-container">
-        <button class="btn btn-about">About</button>
-        <button class="btn btn-start">Start</button>
-        <button class="btn btn-how">Help</button>
+        <a href="./about.html">
+            <button class="btn btn-about">About</button>
+        </a>
+        
+        <a href="./flashcard.html">
+            <button class="btn btn-start">Start</button>
+        </a>
+        <a href="/help.html">
+            <button class="btn btn-how">Help</button>
+        </a>
+        
     </div>
 </body>
 </html>
