--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
         <h1>Learning Arena</h1>
     </div>
     <div class="button-container">
-        <a href="./about.html">
-            <button class="btn btn-about">About</button>
+        <a href="./about.html" class="btn btn-about">
+            About
         </a>
         
-        <a href="./flashcard.html">
-            <button class="btn btn-start">Start</button>
+        <a href="./flashcard.html" class="btn btn-start">
+            Start
         </a>
-        <a href="/help.html">
-            <button class="btn btn-how">Help</button>
+        <a href="/help.html" class="btn btn-how">
+            Help
         </a>
         
     </div>
