editing about page

--- a/about.html
+++ b/about.html
@@ -9,12 +9,18 @@
 <body>
     <div class="quote-container">
         <i class="pin"></i>
-        <p class="note yellow">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium fuga perferendis iure atque vitae expedita ullam exercitationem maiores, itaque dignissimos dolorum voluptatibus porro fugiat ab adipisci. Saepe eaque ipsum exercitationem!
-        </p>
+        <div class="note yellow">
+            <p>
+            🎮This flashcard game was created to make learning fun and interactive. The goal is to help players practice vocabulary by flipping cards to see words, images, and their translations.
+            </p>
+            <p>
+            🎮You can choose different categories (like fruits or animals) from the menu, and each card will show the word in Portuguese on one side and its English translation with an image on the other.
+            </p>
+            <p>
+            🎮The game is designed to be simple, colorful, and engaging — whether you’re learning new words, testing your memory, or just having fun with friends and family.
+            </p>
+        </div>
     </div>
-    <a href="./index.html">
-        <img class="back_sign" src="./signboard_2.png" alt="">  
-    </a>
+    <a href="./index.html" class="back_sign"></a>
 </body>
 </html>
