--- a/flashcard.html
+++ b/flashcard.html
@@ -15,7 +15,7 @@
             <option value="animals">Animals</option>
         </select>
     <div class="actions">
-        <button onclick="restart()" class="btn btn-about">Shuffle</button>
+        <button onclick="suffle()" class="btn btn-about">Shuffle</button>
         <a href="./index.html">
             <button class="btn btn-about">Home</button>
         </a>
