add help page and animals dropdown

--- a/flashcard.html
+++ b/flashcard.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Cards</h1>
-    <label for="myDropdown">Choose an option:</label>
+    <!-- <label for="myDropdown">Choose an option:</label> -->
         <select id="myDropdown" name="selectedOption">
             <option value="none">Choose a option</option>
             <option value="fruits">Fruits</option>
