--- a/help.html
+++ b/help.html
@@ -3,12 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/help.css">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
-<body >
-    <img src="./assets/black-cat-salem.gif" alt="">
-    <h1>THIS PAGE IS UNDER CONSTRUCTION🚧</h1>
-    <a href="/index.html">Back to Home Page</a>
+<body>
+    <div class="quote-container">
+        <i class="pin"></i>
+        <div class="note yellow">
+            <h3>🧭  Welcome to Portuguese Learning Arena!
+                This flashcard game helps you practice vocabulary in a fun way.
+            </h3>
+            <h4>
+                1. Choose a Category
+            </h4>
+            <p>
+                Select a topic like Fruits, Animals, or Objects from the dropdown menu.
+            </p>
+            <h4>
+                2. View the Cards
+            </h4>
+            <p>
+                Each card shows the Portuguese word on the front.
+                <br>Click it to flip and see the English translation with an image.
+            </p>
+            <h4>
+                3. Shuffle the Deck
+            </h4>
+            <p>
+                Click the Shuffle button anytime to randomize the cards.
+            </p>
+            <h4>
+                4. Test Yourself!
+            </h4>
+            <p>
+                Try to remember the meaning before flipping each card — it`s great for memory practice!
+            </p>
+        </div>
+    </div>
+    <a href="./index.html" class="back_sign"></a>
 </body>
 </html>
