update help text

--- a/help.html
+++ b/help.html
@@ -17,7 +17,7 @@
                 1. Choose a Category
             </h4>
             <p>
-                Select a topic like Fruits, Animals, or Objects from the dropdown menu.
+                Select a topic like Fruits or Animals from the dropdown menu.
             </p>
             <h4>
                 2. View the Cards
